...
    );
  }

  Widget _buildPasswordField(ThemeData theme) {
    return Obx(
      () => Semantics(
        label: 'qa.auth.login.password_input',
        identifier: 'qa.auth.login.password_input',
        child: TextFormField(
          key: const ValueKey('qa.auth.login.password_input'),
          controller: controller.passwordController,
          autofocus: true,
          obscureText: !controller.isPasswordVisible.value,
...
