...
          child: SegmentedControl(
            selectedIndex: selectedIndex,
            segments: [
              SegmentItem(
                label: 'scheduled_visits'.tr,
                badge: widget.controller.upcomingVisits.length,
                semanticsLabel: 'qa.visits.tab.scheduled',
                semanticsIdentifier: 'qa.visits.tab.scheduled',
              ),
              SegmentItem(
                label: 'past_visits'.tr,
                badge: widget.controller.pastVisits.length,
                semanticsLabel: 'qa.visits.tab.past',
                semanticsIdentifier: 'qa.visits.tab.past',
              ),
            ],
            onSegmentChanged: (index) => _tabController?.animateTo(index),
          ),
        ),
...
